--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,14 +6,14 @@ jobs:
     name: My first job
     runs-on: ubuntu-latest
     steps:
-      - run: 
-        name: this is first run
+    
+      - name: this is first run
         env:
-           MY_VAR: Hi there! My name is
-           FIRST_NAME: Mona
-           MIDDLE_NAME: The
-           LAST_NAME: Octocat
+             MY_VAR: Hi there! My name is
+             FIRST_NAME: Mona
+             MIDDLE_NAME: The
+             LAST_NAME: Octocat
         run: |
-          echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+            echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
       
   
