--- a/.github/workflows/infrapipeline.yaml
+++ b/.github/workflows/infrapipeline.yaml
@@ -6,4 +6,6 @@ jobs:
     runs-on: self-hosted
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+    steps:
+      - run: terraform --version
     
