--- a/.github/workflows/infrapipeline.yaml
+++ b/.github/workflows/infrapipeline.yaml
@@ -8,4 +8,5 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
   
       - run: terraform --version
-    
+      - run: ipconfig
+      - run: hostname
