--- a/.github/workflows/infrapipeline.yaml
+++ b/.github/workflows/infrapipeline.yaml
@@ -1,6 +1,8 @@
 name: testing-action
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+# on: [push]
+on:
+  workflow_dispatch:
 jobs:
   Explore-GitHub-Actions:
     runs-on: self-hosted
