--- a/.github/workflows/16012024.yaml
+++ b/.github/workflows/16012024.yaml
@@ -2,7 +2,7 @@ name: infra
 
 run-name: ${{ github.actor }} is testing out GitHub Actions
 
-on: [workflow_run]
+on: [workflow_dispatch]
 
 jobs:  
   Explore-GitHub-Actions:
